# QEIR

./: .gitignore  LICENSE  README.md  download_dataset.py  main.py  pyproject.toml  requirements.txt  setup.py  testhyp1.py  testhyp2.py  testhyp3.py
examples/: channel_decomposition_example.py  publication_output_example.py  quarterly_conversion_example.py  robustness_suite_example.py  target_validation_example.py
notebooks/: 01_basic_tutorial.ipynb  01_basic_tutorial_fixed.ipynb  02_hypothesis1_detailed.ipynb  03_hypothesis2_detailed.ipynb  04_hypothesis3_detailed.ipynb  05_advanced_configuration.ipynb  06_custom_analysis.ipynb  README.md  test_all_hypotheses.ipynb  test_fixes.py
qeir/: __init__.py  cli.py  config.py
qeir/analysis/: __init__.py  channel_decomposition.py  identification.py  international_analysis.py  publication_strategy.py  revised_qe_analyzer.py  robustness_testing.py  temporal_correction.py  theoretical_foundation.py
qeir/config/: batch_automation_template.json  batch_config_template.json  fomc_announcements.json  hypothesis_config_template.json  revised_methodology_config.json  validation_config.json
qeir/core/: __init__.py  confidence_effects_analyzer.py  enhanced_hypothesis1.py  enhanced_hypothesis2.py  enhanced_hypothesis3.py  hypothesis_testing.py  market_distortion_analyzer.py  market_distortion_analyzer_minimal.py  ml_models.py  model_comparison.py  model_diagnostics.py  models.py  robustness_testing.py  threshold_reversal_detector.py
qeir/data/: enhanced_data_construction.py  public_data_sources.py
qeir/identification/: __init__.py  (+2 more)
replication/: README.md  generate_all_tables.py  main_results.py  paper1.py  paper2.py
results/: data_summary.csv  executive_summary.txt
src/: REPLICATION_FINDINGS.md  alternative_specs.py  analysis.py  best_matches_summary.py  deep_search.py  exact_match_search.py  exact_paper_replication.py  exhaustive_search.py  fast_n_search.py  final_forensic_search.py  final_match.py  find_exact_spec.py  find_significant_spec.py  focused_search.py  fomc_dates.py  high_coef_search.py  investigate_specifications.py  models.py  monthly_frequency_test.py  n_match_search.py  paper_matching_spec.py  quarterly_n_search.py  quarterly_sig_search.py  quick_sig_search.py  refine_match.py  replicate_international_spillovers.py  replicate_thresholds.py  sig_pattern_search.py  simple_search.py  targeted_n_search.py  verify_best_spec.py
validation/: README.md  apply_enhanced_diagnostics.py  comprehensive_robustness_generator.py  dashboard_performance_testing.py  econometric_benchmark_validation.py  generate_publication_figures.py  hansen_model_validation.py  local_projections_validation.py  performance_benchmarks.py  run_final_validation.py  run_validation_suite.py  software_comparison_validation.py  specification_test_validation.py
(+52 files in other folders)
